--- a/rocketnew/index.html
+++ b/rocketnew/index.html
@@ -7,6 +7,11 @@
   <!-- ... -->
 </head>
 <body>
-  <!-- ... -->
+  <div class="grid gap-4 grid-cols-2">
+  <div>1</div>
+  <div>2</div>
+  <div>3</div>
+  <div>4</div>
+</div>
 </body>
 </html>
